--- a/backend/package.json
+++ b/backend/package.json
@@ -1,1 +1,1 @@
-{ "dependencies": { "cors": "^2.8.5", "express": "^4.19.2", "firebase-admin": "^12.1.1" } }
+{ "dependencies": { "cors": "^2.8.5", "express": "^4.19.2", "firebase-admin": "^12.1.1", "mysql": "^2.18.1" } }
